[package]
name = "sensitive_url"
version = "0.1.0"
edition = "2024"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/sensitive_url"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1" , optional = true }
url = "2"

[dev-dependencies]
serde_json = "1"
